cmake_minimum_required(VERSION 3.8)
project(Cpp_Primer_Answers VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 11)

add_executable(ch01_exercise1_1 exercise1_1.cpp)
add_executable(ch01_exercise1_9 exercise1_9.cpp)
add_executable(ch01_exercise1_10 exercise1_10.cpp)
add_executable(ch01_exercise1_11 exercise1_11.cpp)
add_executable(ch01_exercise1_16 exercise1_16.cpp)
add_executable(ch01_exercise1_18 exercise1_18.cpp)
add_executable(ch01_exercise1_20 exercise1_20.cpp)
add_executable(ch01_exercise1_21 exercise1_21.cpp)
add_executable(ch01_exercise1_22 exercise1_22.cpp)
add_executable(ch01_exercise1_23 exercise1_23.cpp)