cmake_minimum_required(VERSION 3.8)
project(Cpp_Primer_Answers VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 11)

add_executable(ch02_exercise2_4 exercise2_4.cpp)
add_executable(ch02_exercise2_34 exercise2_34.cpp)
add_executable(ch02_exercise2_42_1 exercise2_42_1.cpp)
add_executable(ch02_exercise2_42_2 exercise2_42_2.cpp)
add_executable(ch02_exercise2_42_3 exercise2_42_3.cpp)