cmake_minimum_required(VERSION 3.8)
project(Cpp_Primer_Answers VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 11)

add_executable(ch03_exercise_3_1_a exercise_3_1_a.cpp)
add_executable(ch03_exercise_3_1_b exercise_3_1_b.cpp)
add_executable(ch03_exercise3_2_a exercise3_2_a.cpp)
add_executable(ch03_exercise3_2_b exercise3_2_b.cpp)
add_executable(ch03_exercise3_4_a exercise3_4_a.cpp)
add_executable(ch03_exercise3_4_b exercise3_4_b.cpp)
add_executable(ch03_exercise3_5_a exercise3_5_a.cpp)
add_executable(ch03_exercise3_5_b exercise3_5_b.cpp)
add_executable(ch03_exercise3_6 exercise3_6.cpp)
add_executable(ch03_exercise3_7 exercise3_7.cpp)
add_executable(ch03_exercise3_8 exercise3_8.cpp)
add_executable(ch03_exercise3_10 exercise3_10.cpp)
add_executable(ch03_exercise3_14 exercise3_14.cpp)
add_executable(ch03_exercise3_15 exercise3_15.cpp)
add_executable(ch03_exercise3_16 exercise3_16.cpp)
add_executable(ch03_exercise3_17 exercise3_17.cpp)
add_executable(ch03_exercise3_20 exercise3_20.cpp)
add_executable(ch03_exercise3_21 exercise3_21.cpp)
add_executable(ch03_exercise3_22 exercise3_22.cpp)
add_executable(ch03_exercise3_23 exercise3_23.cpp)
add_executable(ch03_exercise3_24 exercise3_24.cpp)
add_executable(ch03_exercise3_25 exercise3_25.cpp)
add_executable(ch03_exercise3_31 exercise3_31.cpp)
add_executable(ch03_exercise3_32 exercise3_32.cpp)
add_executable(ch03_exercise3_35 exercise3_35.cpp)
add_executable(ch03_exercise3_36 exercise3_36.cpp)
add_executable(ch03_exercise3_39 exercise3_39.cpp)
add_executable(ch03_exercise3_40 exercise3_40.cpp)
add_executable(ch03_exercise3_41 exercise3_41.cpp)
add_executable(ch03_exercise3_42 exercise3_42.cpp)
add_executable(ch03_exercise3_43 exercise3_43.cpp)
add_executable(ch03_exercise3_44 exercise3_44.cpp)
add_executable(ch03_exercise3_45 exercise3_45.cpp)
