add_executable(ch05_exercise4_5 exercise5_5.cpp)
add_executable(ch05_exercise4_6 exercise5_6.cpp)
add_executable(ch05_exercise4_9 exercise5_9.cpp)
add_executable(ch05_exercise4_10 exercise5_10.cpp)
add_executable(ch05_exercise4_11 exercise5_11.cpp)
add_executable(ch05_exercise4_12 exercise5_12.cpp)
add_executable(ch05_exercise4_14 exercise5_14.cpp)
add_executable(ch05_exercise4_17 exercise5_17.cpp)
add_executable(ch05_exercise4_19 exercise5_19.cpp)
add_executable(ch05_exercise4_20 exercise5_20.cpp)
add_executable(ch05_exercise4_21 exercise5_21.cpp)
add_executable(ch05_exercise4_23 exercise5_23.cpp)
add_executable(ch05_exercise4_24 exercise5_24.cpp)
add_executable(ch05_exercise4_25 exercise5_25.cpp)
