add_executable(ch06_exercise6_3 exercise6_3.cpp)
add_executable(ch06_exercise6_4 exercise6_4.cpp)
add_executable(ch06_exercise6_10 exercise6_10.cpp)
add_executable(ch06_exercise6_11 exercise6_11.cpp)
add_executable(ch06_exercise6_12 exercise6_12.cpp)
add_executable(ch06_exercise6_17 exercise6_17.cpp)
add_executable(ch06_exercise6_21 exercise6_21.cpp)
add_executable(ch06_exercise6_22 exercise6_22.cpp)
add_executable(ch06_exercise6_23 exercise6_23.cpp)
add_executable(ch06_exercise6_25 exercise6_25.cpp)
add_executable(ch06_exercise6_27 exercise6_27.cpp)
add_executable(ch06_exercise6_30 exercise6_30.cpp)
add_executable(ch06_exercise6_33 exercise6_33.cpp)
add_executable(ch06_exercise6_42 exercise6_42.cpp)
add_executable(ch06_exercise6_47 exercise6_47.cpp)
add_executable(ch06_exercise6_51 exercise6_51.cpp)
add_executable(ch06_exercise6_55 exercise6_55.cpp)
add_executable(ch06_factMain factMain.cpp fact.cpp)
