add_executable(ch08_exercise8_2 exercise8_2.cpp)
add_executable(ch08_exercise8_6 exercise8_6.cpp)
target_include_directories(ch08_exercise8_6 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../ch07)
add_executable(ch08_exercise8_7 exercise8_7.cpp)
target_include_directories(ch08_exercise8_7 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../ch07)
add_executable(ch08_exercise8_9 exercise8_9.cpp)
add_executable(ch08_exercise8_10 exercise8_10.cpp)
add_executable(ch08_exercise8_11 exercise8_11.cpp)
add_executable(ch08_exercise8_13 exercise8_13.cpp)