add_executable(ch09_exercise9_13 exercise9_13.cpp)
add_executable(ch09_exercise9_20 exercise9_20.cpp)
add_executable(ch09_exercise9_24 exercise9_24.cpp)
add_executable(ch09_exercise9_27 exercise9_27.cpp)
add_executable(ch09_exercise9_33 exercise9_33.cpp)
add_executable(ch09_exercise9_34 exercise9_34.cpp)
add_executable(ch09_exercise9_38 exercise9_38.cpp)
add_executable(ch09_exercise9_43 exercise9_43.cpp)
add_executable(ch09_exercise9_44 exercise9_44.cpp)
add_executable(ch09_exercise9_45 exercise9_45.cpp)
add_executable(ch09_exercise9_46 exercise9_46.cpp)
add_executable(ch09_exercise9_47 exercise9_47.cpp)
add_executable(ch09_exercise9_49 exercise9_49.cpp)
