add_executable(ch10_exercise10_1 exercise10_1.cpp)
add_executable(ch10_exercise10_2 exercise10_2.cpp)
add_executable(ch10_exercise10_3 exercise10_3.cpp)
add_executable(ch10_exercise10_4 exercise10_4.cpp)
add_executable(ch10_exercise10_6 exercise10_6.cpp)
add_executable(ch10_exercise10_9 exercise10_9.cpp)
add_executable(ch10_exercise10_11 exercise10_11.cpp)
add_executable(ch10_exercise10_12 exercise10_12.cpp)
add_executable(ch10_exercise10_13 exercise10_13.cpp)
add_executable(ch10_exercise10_16 exercise10_16.cpp)
add_executable(ch10_exercise10_17 exercise10_17.cpp)
add_executable(ch10_exercise10_18 exercise10_18.cpp)
add_executable(ch10_exercise10_19 exercise10_19.cpp)