add_executable(ch10_exercise10_1 exercise10_1.cpp)
add_executable(ch10_exercise10_2 exercise10_2.cpp)
add_executable(ch10_exercise10_3 exercise10_3.cpp)
add_executable(ch10_exercise10_4 exercise10_4.cpp)
add_executable(ch10_exercise10_6 exercise10_6.cpp)
add_executable(ch10_exercise10_9 exercise10_9.cpp)
add_executable(ch10_exercise10_11 exercise10_11.cpp)
add_executable(ch10_exercise10_12 exercise10_12.cpp)
add_executable(ch10_exercise10_13 exercise10_13.cpp)
add_executable(ch10_exercise10_16 exercise10_16.cpp)
add_executable(ch10_exercise10_17 exercise10_17.cpp)
add_executable(ch10_exercise10_18 exercise10_18.cpp)
add_executable(ch10_exercise10_19 exercise10_19.cpp)
add_executable(ch10_exercise10_20 exercise10_20.cpp)
add_executable(ch10_exercise10_22 exercise10_22.cpp)
add_executable(ch10_exercise10_24 exercise10_24.cpp)
add_executable(ch10_exercise10_25 exercise10_25.cpp)
add_executable(ch10_exercise10_27 exercise10_27.cpp)
add_executable(ch10_exercise10_28 exercise10_28.cpp)
add_executable(ch10_exercise10_29 exercise10_29.cpp)
add_executable(ch10_exercise10_30 exercise10_30.cpp)
add_executable(ch10_exercise10_31 exercise10_31.cpp)
add_executable(ch10_exercise10_32 exercise10_32.cpp)
add_executable(ch10_exercise10_33 exercise10_33.cpp)
add_executable(ch10_exercise10_34 exercise10_34.cpp)
add_executable(ch10_exercise10_35 exercise10_35.cpp)
add_executable(ch10_exercise10_36 exercise10_36.cpp)
add_executable(ch10_exercise10_37 exercise10_37.cpp)
add_executable(ch10_exercise10_42 exercise10_42.cpp)