add_executable(ch11_exercise11_3 exercise11_3.cpp)
add_executable(ch11_exercise11_4 exercise11_4.cpp)
add_executable(ch11_exercise11_8 exercise11_8.cpp)
add_executable(ch11_exercise11_12 exercise11_12.cpp)
add_executable(ch11_exercise11_14 exercise11_14.cpp)
add_executable(ch11_exercise11_20 exercise11_20.cpp)
add_executable(ch11_exercise11_23 exercise11_23.cpp)
add_executable(ch11_exercise11_31 exercise11_31.cpp)
add_executable(ch11_exercise11_32 exercise11_32.cpp)
add_executable(ch11_exercise11_33 exercise11_33.cpp)
add_executable(ch11_exercise11_38 exercise11_38.cpp)