add_executable(ch12_exercise12_2 exercise12_2.cpp)
add_executable(ch12_exercise12_6 exercise12_6.cpp)
add_executable(ch12_exercise12_7 exercise12_7.cpp)
add_executable(ch12_exercise12_14 exercise12_14.cpp)
add_executable(ch12_exercise12_15 exercise12_15.cpp)
add_executable(ch12_exercise12_16 exercise12_16.cpp)
add_executable(ch12_exercise12_20 exercise12_20.cpp)
add_executable(ch12_exercise12_23 exercise12_23.cpp)
add_executable(ch12_exercise12_24 exercise12_24.cpp)
add_executable(ch12_exercise12_26 exercise12_26.cpp)
add_executable(ch12_exercise12_27 exercise12_27.cpp exercise12_27_main.cpp)
add_executable(ch12_exercise12_28 exercise12_28.cpp)