add_executable(ch14_exercise14_5_main exercise14_5_main.cpp exercise14_5.cpp)
add_executable(ch14_exercise14_7_main exercise14_7_main.cpp exercise14_7.cpp)
add_executable(ch14_exercise14_15_main exercise14_15_main.cpp exercise14_15.cpp)
add_executable(ch14_exercise14_22_main exercise14_22_main.cpp exercise14_22.cpp)
add_executable(ch14_exercise14_23_main exercise14_23_main.cpp exercise14_23.cpp)
add_executable(ch14_exercise14_24_main exercise14_24_main.cpp exercise14_24.cpp)
add_executable(ch14_exercise14_35 exercise14_35.cpp)
add_executable(ch14_exercise14_36 exercise14_36.cpp)
add_executable(ch14_exercise14_37 exercise14_37.cpp)
add_executable(ch14_exercise14_38 exercise14_38.cpp)
add_executable(ch14_exercise14_40 exercise14_40.cpp)
add_executable(ch14_exercise14_43 exercise14_43.cpp)
add_executable(ch14_exercise14_44 exercise14_44.cpp)
add_executable(ch14_exercise14_45 exercise14_45.cpp exercise14_45_main.cpp)